--- a/docs/faststore/components/atoms/button.mdx
+++ b/docs/faststore/components/atoms/button.mdx
@@ -834,11 +834,12 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
     value="var(--fs-button-small-icon-width)"
   />
 </TokenTable>
+
 ---
 
 ## Data attributes
 
-You can target and override `Checkbox` styles using the following data attributes:
+You can target and override `Button` styles using the following data attributes:
 
 `data-fs-button`
 
