Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/components/atoms/badge.mdx
+++ b/docs/faststore/components/atoms/badge.mdx
@@ -300,6 +300,9 @@ The `Badge` component can be displayed in two sizes: [`small` (default)](#small)
 
 ### Design tokens: Big
 
+Big badges use increased padding and typography to create a more prominent and impactful component, suitable for key highlights or calls to action.
+
+
 <TokenTable>
   <TokenRow
     token="--fs-badge-big-text-size"
@@ -476,7 +479,7 @@ You can target and override `Badge` styles using the following data attributes:
 
 ### ❌ Don'ts
 
-- Don't use long texts in badges. A reasonable character limit is 15.
+- Don't use long text in badges. A reasonable character limit is 15.
 - Don't label badges with active verbs.
 - Don't rely on color alone to convey meaning. Ensure there is a text alternative for that meaning as well.
 - Don't place badges next to buttons, as badges are not interactive and could confuse users.
