Add Design tokens heading for each example

--- a/docs/faststore/components/atoms/button.mdx
+++ b/docs/faststore/components/atoms/button.mdx
@@ -425,9 +425,17 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
+### Design tokens: Button with an icon
+
+Buttons with icons reserve padding and alignment for the glyph and label, improving scannability while preserving clear touch targets and visual balance.
+
 <TokenTable>
   <TokenRow token="--fs-button-icon-padding" value="0 var(--fs-spacing-1)" />
 </TokenTable>
+
+### Design tokens: Primary
+
+Primary buttons use high‑contrast colors and bold emphasis to highlight the main action on a page, drawing focus and encouraging completion.
 
 <TokenTable>
   <TokenRow
@@ -485,6 +493,10 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
     value="var(--fs-button-shadow-hover)"
   />
 </TokenTable>
+
+### Design tokens: Primary Inverse
+
+Primary inverse buttons adapt the primary style for dark or colored backgrounds, inverting surfaces and text to maintain prominence and accessible contrast.
 
 <TokenTable>
   <TokenRow
@@ -545,6 +557,10 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
+### Design tokens: Secondary
+
+Secondary buttons apply moderate emphasis to support alternative actions, providing clear affordance without competing with the primary call to action.
+
 <TokenTable>
   <TokenRow
     token="--fs-button-secondary-text-color"
@@ -603,6 +619,10 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
     value="var(--fs-button-shadow-hover)"
   />
 </TokenTable>
+
+### Design tokens: Secondary Inverse
+
+Secondary inverse buttons tune colors for dark or colored surfaces, preserving contrast and hierarchy while remaining visually subordinate to primary actions.
 
 <TokenTable>
   <TokenRow
@@ -667,6 +687,10 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
+### Design tokens: Tertiary
+
+Tertiary buttons use minimal emphasis—often transparent backgrounds and subtle borders—for low‑priority or inline actions that should not distract from primary tasks.
+
 <TokenTable>
   <TokenRow
     token="--fs-button-tertiary-text-color"
@@ -723,6 +747,10 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
     value="var(--fs-button-shadow-hover)"
   />
 </TokenTable>
+
+### Design tokens: Tertiary Inverse
+
+Tertiary inverse buttons adjust low‑emphasis styling for dark or colored backgrounds, ensuring legibility and subtle affordance without adding visual weight.
 
 <TokenTable>
   <TokenRow
@@ -785,6 +813,10 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
+### Design tokens: Disabled
+
+Disabled buttons reduce contrast and suppress interactive feedback to clearly communicate inoperability while preserving layout and alignment.
+
 <TokenTable>
   <TokenRow
     token="--fs-button-disabled-bkg-color"
@@ -798,12 +830,20 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   />
 </TokenTable>
 
+### Design tokens: Loading
+
+Loading buttons allocate spacing and motion for progress feedback—optionally with a label—to indicate that an action is processing.
+
 <TokenTable>
   <TokenRow
     token="--fs-button-loading-label-column-gap"
     value="var(--fs-spacing-3)"
   />
 </TokenTable>
+
+### Design tokens: Small
+
+Small buttons tighten padding, height, and icon dimensions for dense layouts, balancing compactness with readability and usable tap targets.
 
 <TokenTable>
   <TokenRow
@@ -819,6 +859,10 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
     value="var(--fs-button-small-icon-width)"
   />
 </TokenTable>
+
+### Design tokens: Small with an icon
+
+Small icon buttons fine‑tune spacing and icon size in compact contexts, maintaining label clarity and alignment within tighter space constraints.
 
 <TokenTable>
   <TokenRow
