--- a/docs/faststore/components/atoms/button.mdx
+++ b/docs/faststore/components/atoms/button.mdx
@@ -926,7 +926,7 @@ You can target and override `Button` styles using the following data attributes:
 - Avoid cluttering the UI with too many buttons.
 - Avoid having more than one primary action button on the screen at a time.
 - Avoid using disabled buttons, if possible. Instead, give preference to hiding the unavailable option.
-- Don't place buttons next to [badges](https://developers.vtex.com/docs/guides/faststore/atoms-badge). Although badges and buttons are similar in appearance, badges are not interactive and may confuse users if not used in the proper context.
+- Don't place buttons next to [Badges](https://developers.vtex.com/docs/guides/faststore/atoms-badge). Although badges and buttons are similar in appearance, badges are not interactive and may confuse users if not used in the proper context.
 - Don't use buttons as [Links](https://developers.vtex.com/docs/guides/faststore/atoms-link). Links are not intended to invite users to take action. Instead, they redirect users somewhere.
 - Avoid using `aria-label` when the button already has a label.
 
