Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/components/atoms/button.mdx
+++ b/docs/faststore/components/atoms/button.mdx
@@ -689,7 +689,7 @@ Secondary inverse buttons tune colors for dark or colored surfaces, preserving c
 
 ### Design tokens: Tertiary
 
-Tertiary buttons use minimal emphasis—often transparent backgrounds and subtle borders—for low‑priority or inline actions that should not distract from primary tasks.
+Tertiary buttons use minimal emphasis—often transparent backgrounds and subtle borders—for low-priority or inline actions that should not distract from primary tasks.
 
 <TokenTable>
   <TokenRow
@@ -750,7 +750,7 @@ Tertiary buttons use minimal emphasis—often transparent backgrounds and subtle
 
 ### Design tokens: Tertiary Inverse
 
-Tertiary inverse buttons adjust low‑emphasis styling for dark or colored backgrounds, ensuring legibility and subtle affordance without adding visual weight.
+Tertiary inverse buttons adjust low-emphasis styling for dark or colored backgrounds, ensuring legibility and subtle affordance without adding visual weight.
 
 <TokenTable>
   <TokenRow
@@ -862,7 +862,7 @@ Small buttons tighten padding, height, and icon dimensions for dense layouts, ba
 
 ### Design tokens: Small with an icon
 
-Small icon buttons fine‑tune spacing and icon size in compact contexts, maintaining label clarity and alignment within tighter space constraints.
+Small icon buttons fine-tune spacing and icon size in compact contexts, maintaining label clarity and alignment within tighter space constraints.
 
 <TokenTable>
   <TokenRow
@@ -925,7 +925,7 @@ You can target and override `Button` styles using the following data attributes:
 - Don't use generic words that can potentially confuse users.
 - Avoid cluttering the UI with too many buttons.
 - Avoid having more than one primary action button on the screen at a time.
-- Avoid using disabled buttons, if possible. Instead, give preference to hiding the unavailable option.
+- Avoid using disabled buttons, if possible. Instead, prefer to hide the unavailable option.
 - Don't place buttons next to [Badges](https://developers.vtex.com/docs/guides/faststore/atoms-badge). Although badges and buttons are similar in appearance, badges are not interactive and may confuse users if not used in the proper context.
 - Don't use buttons as [Links](https://developers.vtex.com/docs/guides/faststore/atoms-link). Links are not intended to invite users to take action. Instead, they redirect users somewhere.
 - Avoid using `aria-label` when the button already has a label.
