--- a/docs/faststore/components/atoms/button.mdx
+++ b/docs/faststore/components/atoms/button.mdx
@@ -908,7 +908,7 @@ You can target and override `Button` styles using the following data attributes:
 
 ### ✅ Dos
 
-- Use standard button designs and shapes to make your button **appear clickable**.
+- Use standard button designs and shapes to make your button **clearly clickable**.
 - Use styles to **communicate the importance of an action** by visually differentiating [primary](#primary) and [secondary](#secondary) buttons.
 - Make buttons **finger-friendly** for mobile users and large enough for **reliable interactions**. Generally, touch targets are at least 44 by 44 CSS pixels.
 - Use **task-specific** words to write button labels.
