Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/components/features/delivery-promise/overview.mdx
+++ b/docs/faststore/components/features/delivery-promise/overview.mdx
@@ -44,8 +44,8 @@ Shoppers can filter available products globally using the **Filter by store**, w
 In PLPs or search pages, the shopper may have the following options to filter:
 
 * **Deliver to:** Displays available products according to the shopper's location.
-* **Pickup at:** Displays the store set in the global pickup point filter, or the one closest to the shopper's location. To change the store set in `Pickup at {storeName}`, the shopper can click on it and select a new store in the modal that opens. It shows all available pickup points within a 50 km pickup radius configured in Checkout. The number of pickup points displayed is unlimited.
-* **Pickup nearby:** Displays products available for pickup at nearby stores. It shows up to 40 pickup points within 10 km of the shopper's location.
+* **Pickup at:** Displays the store set in the global pickup point filter, or the one closest to the shopper's location. To change the store set in `Pickup at {storeName}`, the shopper can click on it and select a new store in the modal that opens. This filter shows all available pickup points within a 50 km radius for pickup configured in Checkout. The number of pickup points displayed is unlimited.
+* **Pickup nearby:** Displays products available for pickup at nearby stores. This filter shows up to 40 pickup points within 10 km of the shopper's location.
 * **Pickup anywhere:** Displays products available for pickup at any participating store within the merchant's network, rather than restricting results to a selected pickup location or geographic proximity. **It's mainly used by B2B stores**.
 
 ![plp-filters](https://vtexhelp.vtexassets.com/assets/docs/src/plp-by-shipping___e9ba4d4e3f0840c3ec53dc94ac7aafc4.png)
