Add short descriptions for Design tokens

--- a/docs/faststore/components/atoms/checkbox.mdx
+++ b/docs/faststore/components/atoms/checkbox.mdx
@@ -165,6 +165,8 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 
 ### Design tokens: Checked
 
+Checked checkboxes use a filled primary background and focused hover accents to clearly indicate selection while maintaining accessible contrast and feedback.
+
 <TokenTable>
   <TokenRow
     token="--fs-checkbox-checked-bkg-color"
@@ -190,6 +192,8 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 
 ### Design tokens: Disabled
 
+Disabled checkboxes lower contrast and remove interactive feedback, preserving layout without suggesting availability.
+
 <TokenTable>
   <TokenRow
     token="--fs-checkbox-disabled-bkg-color"
@@ -213,6 +217,8 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 </TokenTable>
 
 ### Design tokens: Partial
+
+Partial checkboxes present a neutral surface with a primary accent to convey a mixed selection state, useful for parent options of grouped items.
 
 <TokenTable>
   <TokenRow
