--- a/docs/faststore/components/atoms/button.mdx
+++ b/docs/faststore/components/atoms/button.mdx
@@ -71,34 +71,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 
 ## Examples
 
-### Button with an icon
-
-<Tabs items={['Example', 'Code']} defaultIndex="0">
-  <Tab>
-    <OverviewSection>
-      <Button variant="primary" icon={<Icon name="ShoppingCart" />} iconPosition="left">
-        {'Add to Cart'}
-      </Button>
-    </OverviewSection>
-  </Tab>
-  <Tab>
-    
-    ```tsx
-    import { Button, Icon } from "@faststore/ui";
-
-    export function Example() {
-        return (
-            <Button variant="primary" icon={<Icon name="ShoppingCart" />} iconPosition="left">
-                Add to Cart
-            </Button>
-        );
-    }
-    ```
-
-  </Tab>
-</Tabs>
-
-### Visual hierarchy
+### Variants
 
 #### Primary
 
@@ -252,9 +225,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 
 ---
 
-### Variants
-
-#### Disabled
+### Disabled
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
@@ -281,7 +252,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   </Tab>
 </Tabs>
 
-#### Loading
+### Loading
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
@@ -329,6 +300,8 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
   </Tab>
 </Tabs>
 
+### Size
+
 #### Small
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
@@ -375,6 +348,34 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
         return (
             <Button variant="primary" size="small" icon={<Icon name="ShoppingCart" />}>
                 Button
+            </Button>
+        );
+    }
+    ```
+
+  </Tab>
+</Tabs>
+
+
+### Button with an icon
+
+<Tabs items={['Example', 'Code']} defaultIndex="0">
+  <Tab>
+    <OverviewSection>
+      <Button variant="primary" icon={<Icon name="ShoppingCart" />} iconPosition="left">
+        {'Add to Cart'}
+      </Button>
+    </OverviewSection>
+  </Tab>
+  <Tab>
+    
+    ```tsx
+    import { Button, Icon } from "@faststore/ui";
+
+    export function Example() {
+        return (
+            <Button variant="primary" icon={<Icon name="ShoppingCart" />} iconPosition="left">
+                Add to Cart
             </Button>
         );
     }
