--- a/docs/faststore/components/atoms/slider.mdx
+++ b/docs/faststore/components/atoms/slider.mdx
@@ -5,11 +5,8 @@ sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Slider___9fa1f5d802a9bbdc93a77db318594af7.png
 ---
 
-## Overview
-
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
-    <p>Default Version</p>
     <OverviewSection>
       <Slider
         max={{ absolute: 500, selected: 250 }}
@@ -17,35 +14,13 @@ sidebar_custom_props:
         absoluteValuesLabel={{ min: "0", max: "500"}}
       />
     </OverviewSection>
-    <p>Show Labels on Hover</p>
-    <OverviewSection>
-      <Slider
-        max={{ absolute: 500, selected: 250 }}
-        min={{ absolute: 0, selected: 100 }}
-        absoluteValuesLabel={{ min: "0", max: "500"}}
-        maxValueLabelComponent={(maxValue) => {return <span>{maxValue}</span>}}
-        minValueLabelComponent={(minValue) => {return <span>{minValue}</span>}}
-      />
-    </OverviewSection>
-
   </Tab>
   <Tab>
-    <p>Default Version</p>
     ```tsx
     <Slider
       max={{ absolute: 500, selected: 250 }}
       min={{ absolute: 0, selected: 100 }}
       absoluteValuesLabel={{ min: "0", max: "500"}}
-    />
-    ```
-    <p>Show Labels on Hover</p>
-    ```tsx
-    <Slider
-      max={{ absolute: 500, selected: 250 }}
-      min={{ absolute: 0, selected: 100 }}
-      absoluteValuesLabel={{ min: "0", max: "500"}}
-      maxValueLabelComponent={(maxValue) => {return <span>{maxValue}</span>}}
-      minValueLabelComponent={(minValue) => {return <span>{minValue}</span>}}
     />
     ```
   </Tab>
@@ -53,9 +28,9 @@ sidebar_custom_props:
 
 ---
 
-## Import
+## Usage
 
-Import the component from [@faststore/ui](https://developers.vtex.com/docs/guides/faststore/components-index)
+### Import the component
 
 ```tsx
 import { Slider } from '@faststore/ui'
@@ -63,64 +38,56 @@ import { Slider } from '@faststore/ui'
 
 ### Import Styles into your FastStore project
 
-To apply the styles of this component in your FastStore project, import the following into your stylesheet:
+To apply styles, include the following in your stylesheet:
 
 ```scss
 @import '@faststore/ui/src/components/atoms/Slider/styles.scss';
 ```
 
-Follow the instructions in the [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles) tutorial.
+For details, see [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles).
 
 ---
 
-## Usage
+## Examples
 
-<OverviewSection>
-  <Slider
-    max={{ absolute: 500, selected: 250 }}
-    min={{ absolute: 0, selected: 100 }}
-    absoluteValuesLabel={{
-      min: useFormattedPrice(0),
-      max: useFormattedPrice(500),
-    }}
-    maxValueLabelComponent={(maxValue) => {
-      return <Price formatter={useFormattedPrice} value={maxValue} />
-    }}
-    minValueLabelComponent={(minValue) => {
-      return <Price formatter={useFormattedPrice} value={minValue} />
-    }}
-  />
-</OverviewSection>
-```tsx
-<Slider
-  max={{ absolute: 500, selected: 250 }}
-  min={{ absolute: 0, selected: 100 }}
-  absoluteValuesLabel={{
-    min: useFormattedPrice(0),
-    max: useFormattedPrice(500),
-  }}
-  maxValueLabelComponent={(maxValue) => {
-    return <Price formatter={useFormattedPrice} value={maxValue} />
-  }}
-  minValueLabelComponent={(minValue) => {
-    return <Price formatter={useFormattedPrice} value={minValue} />
-  }}
-/>
-```
-
----
-
-## Props
-
-<ComponentPropsSection component="Slider" />
-
-### Range
-
-<PropsSection propsList={propsRange} />
-
-### RangeLabel
-
-<PropsSection propsList={propsRangeLabel} />
+<Tabs items={['Example', 'Code']} defaultIndex="0">
+  <Tab>
+    <OverviewSection>
+      <Slider
+        max={{ absolute: 500, selected: 250 }}
+        min={{ absolute: 0, selected: 100 }}
+        absoluteValuesLabel={{
+          min: useFormattedPrice(0),
+          max: useFormattedPrice(500),
+        }}
+        maxValueLabelComponent={(maxValue) => {
+          return <Price formatter={useFormattedPrice} value={maxValue} />
+        }}
+        minValueLabelComponent={(minValue) => {
+          return <Price formatter={useFormattedPrice} value={minValue} />
+        }}
+      />
+    </OverviewSection>
+  </Tab>
+  <Tab>
+    ```tsx
+    <Slider
+      max={{ absolute: 500, selected: 250 }}
+      min={{ absolute: 0, selected: 100 }}
+      absoluteValuesLabel={{
+        min: useFormattedPrice(0),
+        max: useFormattedPrice(500),
+      }}
+      maxValueLabelComponent={(maxValue) => {
+        return <Price formatter={useFormattedPrice} value={maxValue} />
+      }}
+      minValueLabelComponent={(minValue) => {
+        return <Price formatter={useFormattedPrice} value={minValue} />
+      }}
+    />
+    ```
+  </Tab>
+</Tabs>
 
 ---
 
@@ -159,7 +126,7 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
   />
 </TokenTable>
 
-### Nested Elements
+### Nested elements
 
 #### Thumb
 
@@ -196,7 +163,7 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
   />
 </TokenTable>
 
-#### Absolute Values
+#### Absolute values
 
 <TokenTable>
   <TokenRow
@@ -206,7 +173,7 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
   />
 </TokenTable>
 
-#### Value Label
+#### Value label
 
 <TokenTable>
   <TokenRow
@@ -222,9 +189,9 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ---
 
-## Customization
+## Data attributes
 
-For further customization, you can use the following data attributes:
+You can target and override Badge styles using the following data attributes:
 
 `data-fs-slider`
 
@@ -238,13 +205,27 @@ For further customization, you can use the following data attributes:
 
 ---
 
+## Props
+
+<ComponentPropsSection component="Slider" />
+
+### Range
+
+<PropsSection propsList={propsRange} />
+
+### RangeLabel
+
+<PropsSection propsList={propsRangeLabel} />
+
+---
+
 ## Related components
 
 <SectionList>
   <SectionItem
     title="PriceRange"
     description="
-Price Ranges are sliders that allows users to select a maximum and minimum price."
+Price Ranges are sliders that allow users to select a maximum and minimum price."
     actionPath="/docs/guides/faststore/organisms-price-range"
   >
     <PriceRangeUsage />
